--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="video-container">
         <video autoplay loop muted playsinline>
-            <source src="/assets/img/Loop Background _ Live Wallpaper _ Chilling Cat _ No Sound (1080p).mp4" type="video/mp4">
+            <source src="./assets/img/Loop Background _ Live Wallpaper _ Chilling Cat _ No Sound (1080p).mp4" type="video/mp4">
         </video>
     </div>
 
