fix bg landing page

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <div class="video-container">
-        <video autoplay loop muted playsinline>
+        <video autoplay muted loop id="bg-video">
             <source src="./assets/img/Loop Background _ Live Wallpaper _ Chilling Cat _ No Sound (1080p).mp4" type="video/mp4">
         </video>
+
     </div>
 
     <header class="header">
