--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
     <div class="video-container">
         <video autoplay muted loop id="bg-video">
-            <source src="./assets/img/Loop Background _ Live Wallpaper _ Chilling Cat _ No Sound (1080p).mp4" type="video/mp4">
+            <source src="assets/img/Loop Background _ Live Wallpaper _ Chilling Cat _ No Sound (1080p).mp4" type="video/mp4">
         </video>
-
     </div>
 
     <header class="header">
@@ -24,7 +23,7 @@
             <a href="./pages/page4/index.html">Projects</a>
         </nav>
 
-        <a><img src="/assets/img/ibochi.png" alt=""></a>
+        <a href="#"><img src="assets/img/ibochi.png" alt="Ibochi Logo"></a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
     </header>
@@ -32,7 +31,7 @@
     <section class="home" id="home">
         <div class="home-content">
             <h1>Hello I'am Carlos Gipal</h1>
-            <h3>And Im a <span>Web Design Student</span></h3>
+            <h3>And I'm a <span>Web Design Student</span></h3>
             <p>Despite my personality not always being the best, I have a strong passion for developing responsive and user-friendly websites. With solid skills in HTML, CSS, and C++.</p>
             <div class="social-media">
                 <a href="https://github.com/Gipal30"><i class='bx bxl-github'></i></a>
@@ -40,9 +39,8 @@
         </div>
 
         <div class="home-img">
-            <img src="./assets/img/carlos.jpg" alt="">
+            <img src="assets/img/carlos.jpg" alt="Carlos Gipal">
         </div>
     </section>
 </body>
 </html>
-
