fix site not found

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
-            <a href="/pages/page1/index.html">Informations</a>
+            <a href="./pages/page1/index.html">Informations</a>
             <a href="./pages/page3/index.html">Hobbies</a>
             <a href="./pages/page2/index.html">Experience</a>
             <a href="./pages/page4/index.html">Projects</a>
