fix info no page

--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -17,7 +17,7 @@
         <i class='bx bx-menu' id="menu-icon"></i>
 
         <nav class="navbar">
-            <a href="/index.html">Home</a>
+            <a href="../../index.html">Home</a>
             <a href="#about" class="active">Informations</a>
             <a href="../page3/index.html">Hobbies</a>
             <a href="../page2/index.html">Experience</a>
